hphp/hack/test/typecheck/inout/bad_inout_use_lvalue1.php.exp
File "bad_inout_use_lvalue1.php", line 6, characters 11-12:
You cannot use this syntax with `inout`. (Parsing[1002])
